chore: add recyclarr

--- a/stacks/black-sea/docker-comose.yml
+++ b/stacks/black-sea/docker-comose.yml
@@ -127,6 +127,25 @@
     networks:
       - black-sea
 
+  #  ██████╗ ███████╗ ██████╗██╗   ██╗ ██████╗██╗      █████╗ ██████╗ ██████╗
+  #  ██╔══██╗██╔════╝██╔════╝╚██╗ ██╔╝██╔════╝██║     ██╔══██╗██╔══██╗██╔══██╗
+  #  ██████╔╝█████╗  ██║      ╚████╔╝ ██║     ██║     ███████║██████╔╝██████╔╝
+  #  ██╔══██╗██╔══╝  ██║       ╚██╔╝  ██║     ██║     ██╔══██║██╔══██╗██╔══██╗
+  #  ██║  ██║███████╗╚██████╗   ██║   ╚██████╗███████╗██║  ██║██║  ██║██║  ██║
+  #  ╚═╝  ╚═╝╚══════╝ ╚═════╝   ╚═╝    ╚═════╝╚══════╝╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═╝
+  recyclarr:
+    image: ghcr.io/recyclarr/recyclarr
+    container_name: recyclarr
+    user: "${PUID}:${PGID}"
+    volumes:
+      - ${CONFIG_PATH}/recyclarr:/config
+    environment:
+      - TZ=${TZ}
+    restart: unless-stopped
+    networks:
+      - black-sea
+
+
   #  ██████╗  █████╗ ███████╗ █████╗ ██████╗ ██████╗
   #  ██╔══██╗██╔══██╗╚══███╔╝██╔══██╗██╔══██╗██╔══██╗
   #  ██████╔╝███████║  ███╔╝ ███████║██████╔╝██████╔╝
