--- a/stacks/analytics/docker-compose.yml
+++ b/stacks/analytics/docker-compose.yml
@@ -17,6 +17,8 @@
     ports:
       - '3001:3001'
     restart: unless-stopped
+    networks:
+      - analytics
 
   #  ██╗███╗   ██╗███████╗██╗     ██╗   ██╗██╗  ██╗██████╗ ██████╗
   #  ██║████╗  ██║██╔════╝██║     ██║   ██║╚██╗██╔╝██╔══██╗██╔══██╗
