chore: add uptime-kuma and ntfy for analytics

--- a/stacks/analytics/sample.env
+++ b/stacks/analytics/sample.env
@@ -1,4 +1,9 @@
-﻿CONFIG_PATH
+﻿CONFIG_PATH=
+CACHE_PATH=
+PUID_NTFY=100
+PGID_NTFY=100
+TZ=Etc/UTC
+
 INFLUXDB_USERNAME=
 INFLUXDB_PASSWORD=
 INFLUXDB_ORG=
