--- a/stacks/analytics/docker-compose.yml
+++ b/stacks/analytics/docker-compose.yml
@@ -69,7 +69,68 @@
     networks:
       - analytics
 
+  #  ██╗   ██╗██████╗ ████████╗██╗███╗   ███╗███████╗    ██╗  ██╗██╗   ██╗███╗   ███╗ █████╗
+  #  ██║   ██║██╔══██╗╚══██╔══╝██║████╗ ████║██╔════╝    ██║ ██╔╝██║   ██║████╗ ████║██╔══██╗
+  #  ██║   ██║██████╔╝   ██║   ██║██╔████╔██║█████╗█████╗█████╔╝ ██║   ██║██╔████╔██║███████║
+  #  ██║   ██║██╔═══╝    ██║   ██║██║╚██╔╝██║██╔══╝╚════╝██╔═██╗ ██║   ██║██║╚██╔╝██║██╔══██║
+  #  ╚██████╔╝██║        ██║   ██║██║ ╚═╝ ██║███████╗    ██║  ██╗╚██████╔╝██║ ╚═╝ ██║██║  ██║
+  #   ╚═════╝ ╚═╝        ╚═╝   ╚═╝╚═╝     ╚═╝╚══════╝    ╚═╝  ╚═╝ ╚═════╝ ╚═╝     ╚═╝╚═╝  ╚═╝
+  uptime-kuma:
+    image: louislam/uptime-kuma:1
+    container_name: uptime-kuma
+    ports:
+      - "3030:3001"
+    volumes:
+      - ${CONFIG_PATH}/uptime-kuma:/app/data
+    restart: unless-stopped
+    networks:
+      - analytics
+      - black-sea
+      - nextcloud
+      - dvr
+
+  #  ███╗   ██╗████████╗███████╗██╗   ██╗
+  #  ████╗  ██║╚══██╔══╝██╔════╝╚██╗ ██╔╝
+  #  ██╔██╗ ██║   ██║   █████╗   ╚████╔╝
+  #  ██║╚██╗██║   ██║   ██╔══╝    ╚██╔╝
+  #  ██║ ╚████║   ██║   ██║        ██║
+  #  ╚═╝  ╚═══╝   ╚═╝   ╚═╝        ╚═╝
+  ntfy:
+    image: binwiederhier/ntfy
+    container_name: ntfy
+    command:
+      - serve
+    environment:
+      - TZ=${TZ}
+    user: "${PUID_NTFY}:${PGID_NTFY}"
+    volumes:
+      - ${CACHE_PATH}ntfy:/var/cache/ntfy
+      - ${CONFIG_PATH}/ntfy:/etc/ntfy
+    ports:
+      - "8081:80"
+    healthcheck:
+      test: [ "CMD-SHELL", "wget -q --tries=1 http://localhost:80/v1/health -O - | grep -Eo '\"healthy\"\\s*:\\s*true' || exit 1" ]
+      interval: 60s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    restart: unless-stopped
+    networks:
+      - analytics
+      - black-sea
+      - nextcloud
+      - dvr
+
 networks:
   analytics:
     external: true
     name: analytics
+  black-sea:
+    external: true
+    name: black-sea
+  nextcloud:
+    external: true
+    name: nextcloud
+  dvr:
+    external: true
+    name: dvr
