--- a/stacks/black-sea/docker-comose.yml
+++ b/stacks/black-sea/docker-comose.yml
@@ -30,6 +30,7 @@
       retries: 3
     networks:
       - black-sea
+      - proxy
 
   #  ██████╗  █████╗ ██████╗  █████╗ ██████╗ ██████╗
   #  ██╔══██╗██╔══██╗██╔══██╗██╔══██╗██╔══██╗██╔══██╗
@@ -57,6 +58,7 @@
       retries: 3
     networks:
       - black-sea
+      - proxy
 
   radarr-anime:
     image: linuxserver/radarr:latest
@@ -78,6 +80,7 @@
       retries: 3
     networks:
       - black-sea
+      - proxy
 
   #  ███████╗ ██████╗ ███╗   ██╗ █████╗ ██████╗ ██████╗
   #  ██╔════╝██╔═══██╗████╗  ██║██╔══██╗██╔══██╗██╔══██╗
@@ -105,6 +108,7 @@
       retries: 3
     networks:
       - black-sea
+      - proxy
 
   sonarr-anime:
     image: linuxserver/sonarr:latest
@@ -126,6 +130,7 @@
       retries: 3
     networks:
       - black-sea
+      - proxy
 
   #  ██████╗ ███████╗ ██████╗██╗   ██╗ ██████╗██╗      █████╗ ██████╗ ██████╗
   #  ██╔══██╗██╔════╝██╔════╝╚██╗ ██╔╝██╔════╝██║     ██╔══██╗██╔══██╗██╔══██╗
@@ -138,12 +143,13 @@
     container_name: recyclarr
     user: "${PUID}:${PGID}"
     volumes:
-      - ${CONFIG_PATH}/recyclarr:/config
+      - ${CONFIG_PATH}/arr/recyclarr:/config
     environment:
       - TZ=${TZ}
     restart: unless-stopped
     networks:
       - black-sea
+      - proxy
 
   #  ██████╗  █████╗ ███████╗ █████╗ ██████╗ ██████╗
   #  ██╔══██╗██╔══██╗╚══███╔╝██╔══██╗██╔══██╗██╔══██╗
@@ -194,6 +200,7 @@
       retries: 3
     networks:
       - black-sea
+      - proxy
 
   #  ██████╗ ██████╗  ██████╗ ██╗    ██╗██╗      █████╗ ██████╗ ██████╗
   #  ██╔══██╗██╔══██╗██╔═══██╗██║    ██║██║     ██╔══██╗██╔══██╗██╔══██╗
@@ -220,6 +227,7 @@
       retries: 3
     networks:
       - black-sea
+      - proxy
 
   #       ██╗███████╗██╗     ██╗     ██╗   ██╗███████╗██╗███╗   ██╗
   #       ██║██╔════╝██║     ██║     ╚██╗ ██╔╝██╔════╝██║████╗  ██║
@@ -254,6 +262,7 @@
       retries: 3
     networks:
       - black-sea
+      - proxy
 
   #       ██╗███████╗██╗     ██╗     ██╗   ██╗███████╗███████╗███████╗██████╗ ██████╗
   #       ██║██╔════╝██║     ██║     ╚██╗ ██╔╝██╔════╝██╔════╝██╔════╝██╔══██╗██╔══██╗
@@ -274,8 +283,12 @@
     restart: unless-stopped
     networks:
       - black-sea
+      - proxy
 
 networks:
   black-sea:
     external: true
     name: black-sea
+  proxy:
+    external: true
+    name: proxy
