--- a/stacks/dvr/sample.env
+++ b/stacks/dvr/sample.env
@@ -1,5 +1,5 @@
-﻿CONFIG_PATH=/mnt/apps_pool/configs
-MEDIA_PATH=/mnt/secure_pool
-PUID=3002
-PGID=3002
-TZ=Europe/Bucharest
+﻿CONFIG_PATH=
+MEDIA_PATH=
+PUID=100
+PGID=100
+TZ=Etc/UTC
