--- a/stacks/nextcloud/docker-compose.yml
+++ b/stacks/nextcloud/docker-compose.yml
@@ -23,6 +23,22 @@
       - nextcloud
       - proxy
 
+  collabora:
+    image: collabora/code:latest
+    container_name: collabora
+    environment:
+      - domain=${NEXTCLOUD_DOMAIN}
+      - extra_params=--o:ssl.enable=false --o:storage.wopi.host[nextcloud]=true
+    ports:
+      - "9980:9980"
+    cap_add:
+      - MKNOD
+    restart: always
+    networks:
+      - nextcloud
+      - proxy
+
+
   postgresql:
     image: postgres:latest
     container_name: nextcloud-postgres
