--- a/stacks/analytics/docker-compose.yml
+++ b/stacks/analytics/docker-compose.yml
@@ -21,33 +21,6 @@
       - analytics
       - proxy
 
-  #  ██╗███╗   ██╗███████╗██╗     ██╗   ██╗██╗  ██╗██████╗ ██████╗
-  #  ██║████╗  ██║██╔════╝██║     ██║   ██║╚██╗██╔╝██╔══██╗██╔══██╗
-  #  ██║██╔██╗ ██║█████╗  ██║     ██║   ██║ ╚███╔╝ ██║  ██║██████╔╝
-  #  ██║██║╚██╗██║██╔══╝  ██║     ██║   ██║ ██╔██╗ ██║  ██║██╔══██╗
-  #  ██║██║ ╚████║██║     ███████╗╚██████╔╝██╔╝ ██╗██████╔╝██████╔╝
-  #  ╚═╝╚═╝  ╚═══╝╚═╝     ╚══════╝ ╚═════╝ ╚═╝  ╚═╝╚═════╝ ╚═════╝
-  influxdb:
-    image: influxdb:2.7-alpine
-    container_name: influxdb
-    environment:
-      - DOCKER_INFLUXDB_INIT_MODE=setup
-      - DOCKER_INFLUXDB_INIT_USERNAME=${INFLUXDB_USERNAME}
-      - DOCKER_INFLUXDB_INIT_PASSWORD=${INFLUXDB_PASSWORD}
-      - DOCKER_INFLUXDB_INIT_ORG=${INFLUXDB_ORG}
-      - DOCKER_INFLUXDB_INIT_BUCKET=${INFLUXDB_OPN_BUCKET}
-      - DOCKER_INFLUXDB_INIT_RETENTION=30d
-      - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=${INFLUXDB_ADMIN_TOKEN}
-    volumes:
-      - ${CONFIG_PATH}/influxdb:/var/lib/influxdb2
-    ports:
-      - "8086:8086"
-    restart: unless-stopped
-    healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:8086/health" ]
-    networks:
-      - analytics
-      - proxy
 
   #   ██████╗ ██████╗  █████╗ ███████╗ █████╗ ███╗   ██╗ █████╗
   #  ██╔════╝ ██╔══██╗██╔══██╗██╔════╝██╔══██╗████╗  ██║██╔══██╗
@@ -66,10 +39,9 @@
     volumes:
       - ${CONFIG_PATH}/grafana:/var/lib/grafana
     restart: unless-stopped
-    depends_on:
-      - influxdb
     networks:
       - analytics
+      - db_network
       - proxy
 
   #  ██╗   ██╗██████╗ ████████╗██╗███╗   ███╗███████╗    ██╗  ██╗██╗   ██╗███╗   ███╗ █████╗
@@ -107,14 +79,13 @@
     environment:
       - TZ=${TZ}
       - NTFY_BASE_URL=${NTFY_BASE_URL}
-      - NTFY_CACHE_FILE=/var/lib/ntfy/cache.db
-      - NTFY_AUTH_FILE=/var/lib/ntfy/auth.db
-      - NTFY_ATTACHMENT_CACHE_DIR=/var/lib/ntfy/attachments
+      - NTFY_CACHE_FILE=/var/cache/ntfy/cache.db
+      - NTFY_AUTH_FILE=/var/cache/ntfy/auth.db
+      - NTFY_ATTACHMENT_CACHE_DIR=/var/cache/ntfy/attachments
       - NTFY_UPSTREAM_BASE_URL=https://ntfy.sh
       - NTFY_BEHIND_PROXY=true
       - NTFY_AUTH_DEFAULT_ACCESS=deny-all
       - NTFY_ENABLE_LOGIN=true
-
     user: "${PUID_NTFY}:${PGID_NTFY}"
     volumes:
       - ${CACHE_PATH}/ntfy:/var/cache/ntfy
@@ -151,4 +122,7 @@ networks:
   proxy:
     external: true
     name: proxy
+  db_network:
+    external: true
+    name: db_network
 
