chore: test github build and push workflow & dockerfile image.
I don't have a linux machine to build and test this locally :(

--- a/stacks/dev-container/docker-compose.yml
+++ b/stacks/dev-container/docker-compose.yml
@@ -8,7 +8,7 @@
   #  ╚═════╝ ╚══════╝╚═════╝ ╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
   debian:
     image: debian:bookworm
-    container_name: debian-devbox
+    container_name: debian-dev-container
     ports:
       - "2222:22"
     restart: unless-stopped
