feat: save openssh configs to avoid mount volume issue

--- a/stacks/dev-container/Dockerfile
+++ b/stacks/dev-container/Dockerfile
@@ -38,11 +38,48 @@ RUN wget -O- https://apt.releases.hashicorp.com/gpg | gpg --dearmor | tee /usr/s
 # Create workspace directory
 RUN mkdir -p /workspace
 
+# Create jetbrains directory
+RUN mkdir -p /jetbrains
+
+# Backup the original SSH server configuration and keys
+RUN cp -r /etc/ssh /etc/ssh-defaults
+
+# Create entrypoint script
+RUN cat > /entrypoint.sh << 'EOF'
+#!/bin/bash
+
+# Function to populate SSH server config if directory is empty
+populate_ssh_config() {
+    if [ -d "/etc/ssh" ] && [ -z "$(ls -A /etc/ssh)" ]; then
+        echo "SSH config directory is empty, populating with defaults..."
+        cp -r /etc/ssh-defaults/* /etc/ssh/
+
+        # Generate new host keys if they don't exist
+        if [ ! -f "/etc/ssh/ssh_host_rsa_key" ]; then
+            echo "Generating SSH host keys..."
+            ssh-keygen -A
+        fi
+
+        # Ensure proper permissions
+        chmod 600 /etc/ssh/ssh_host_*_key
+        chmod 644 /etc/ssh/ssh_host_*_key.pub
+        chmod 644 /etc/ssh/sshd_config
+    fi
+}
+
+# Populate SSH config if needed
+populate_ssh_config
+
+# Start SSH service and keep container running
+service ssh start && tail -f /dev/null
+EOF
+
+RUN chmod +x /entrypoint.sh
+
 # Expose SSH port
 EXPOSE 22
 
 # Expose common development ports
 EXPOSE 3000 3001 4200 5000 5173 8000 8080 8081 9000
 
-# Start SSH service and keep container running
-CMD service ssh start && tail -f /dev/null
+CMD ["/entrypoint.sh"]
